Add links to root page

--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Guests#index</h1>
 <ul>
 <% @guests.each do |guest| %>
-  <li><%= guest.first_name %> <%= guest.last_name %></li>
+  <li><%= link_to "#{guest.first_name} #{guest.last_name}", guest %></li>
 <% end %>
 </ul>
 
